# elevenlabs-worldhackathon

./: README.md  elevenlabs-specialist.md
.claude/agents/: livekit-docs-specialist.md  twilio-specialist.md
backend/: .env.example  .gitignore  PRD.md  future-todo.md  pyproject.toml
backend/src/vishing/: __init__.py  analyzer.py  cli.py  config.py  sms.py  voice_agent.py  worker.py
docs/: PROJECT_DESCRIPTION.md  twilio-sip-trunk-setup.md
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/campaigns/: page.tsx
frontend/app/dashboard/campaigns/[id]/: page.tsx
frontend/app/dashboard/dnd/: page.tsx
frontend/app/dashboard/members/: page.tsx
frontend/app/dashboard/rewards/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/dashboard/training/: page.tsx
frontend/app/org-selection/: page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
frontend/components/: providers.tsx
frontend/components/dashboard/: add-to-dnd-modal.tsx  dnd-badge.tsx  exclusion-warning.tsx  header.tsx  index.ts  recent-campaigns.tsx  sidebar.tsx  stats-cards.tsx
frontend/components/landing/: cta.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  how-it-works.tsx  index.ts
frontend/components/ui/: select.tsx
frontend/contexts/: campaign-context.tsx
frontend/lib/: dnd.ts  mock-data.ts  safe-hours.ts  types.ts
thoughts/shared/plans/: 2025-12-11-voice-phishing-pentest-tool.md
(+1 files in other folders)
