[project]
name = "vishing"
version = "0.1.0"
description = "Voice phishing penetration testing tool"
requires-python = ">=3.11"
dependencies = [
    "twilio>=9.0.0",
    "livekit>=0.18.0",
    "livekit-agents>=0.12.0",
    "livekit-plugins-elevenlabs>=0.9.0",
    "livekit-plugins-silero>=0.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
vishing = "vishing.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vishing"]
